--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,4 @@
 extends:
-  - "plugin:@ianwremmel/ianwremmel/universal"
+  - "plugin:@ianwremmel/ianwremmel/node"
 parserOptions:
-  sourceType: "script"
+  sourceType: "module"
