--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "scripts": {
     "build": "npm-run-all build:*",
     "build:readme": "markdown-toc -i --bullets='-' --maxdepth=3  README.md  && prettier --write README.md",
-    "eslint": "eslint --ignore --ignore-path .gitignore",
+    "eslint": "eslint --ignore-path .gitignore --ignore-pattern dist",
     "lint": "npm-run-all lint:*",
     "lint:changelog": "commitlint --from origin/master --to HEAD",
     "lint:js": "npm run --silent eslint -- .",
+    "lint:types": "tsc",
     "semantic-release": "semantic-release",
     "test": "echo 'no tests specified'; exit 1"
   },
@@ -44,7 +45,8 @@
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
-    "semantic-release": "^15.10.6"
+    "semantic-release": "^15.10.6",
+    "typescript": "^3.1.3"
   },
   "lint-staged": {
     "*.js": "npm run eslint -- ",
