--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.0-development",
   "description": "",
   "bin": {},
-  "main": "./src/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/ianwremmel/debug.git"
   },
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "npm-run-all build:*",
+    "build:cjs": "BUILD_TARGET=cjs npm run compile",
+    "build:esm": "BUILD_TARGET=esm npm run compile",
     "build:readme": "markdown-toc -i --bullets='-' --maxdepth=3  README.md  && prettier --write README.md",
+    "compile": "babel -d dist/${BUILD_TARGET} src",
     "eslint": "eslint --ignore-path .gitignore --ignore-pattern dist",
     "lint": "npm-run-all lint:*",
     "lint:changelog": "commitlint --from origin/master --to HEAD",
@@ -25,11 +30,24 @@
   "keywords": [],
   "author": "Ian Remmel <1182361+ianwremmel@users.noreply.github.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "debug": "^4.1.0",
+    "invariant": "^2.2.4",
+    "pkg-up": "^2.0.0",
+    "supports-color": "^5.5.0"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
     "@ianwremmel/eslint-plugin-ianwremmel": "^2.0.0",
+    "@types/debug": "0.0.31",
+    "@types/invariant": "^2.2.29",
+    "@types/node": "^10.12.0",
+    "@types/supports-color": "^5.3.0",
     "condition-circle": "^2.0.1",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
@@ -45,6 +63,7 @@
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.3",
+    "rimraf": "^2.6.2",
     "semantic-release": "^15.10.6",
     "typescript": "^3.1.3"
   },
