--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "bin": {},
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
+  "types": "./types.d.ts",
   "repository": {
     "type": "git",
     "url": "git://github.com/ianwremmel/debug.git"
