--- a/package.json
+++ b/package.json
@@ -44,26 +44,26 @@
     "@babel/preset-env": "^7.1.0",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
-    "@ianwremmel/eslint-plugin-ianwremmel": "^2.0.0",
+    "@ianwremmel/eslint-plugin-ianwremmel": "^3.1.1",
     "@types/debug": "0.0.31",
     "@types/invariant": "^2.2.29",
     "@types/node": "^10.12.0",
     "@types/supports-color": "^5.3.0",
     "condition-circle": "^2.0.1",
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-comments": "^1.0.0",
-    "eslint-plugin-compat": "^2.6.2",
-    "eslint-plugin-eslint-comments": "^3.0.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-markdown": "^1.0.0-rc.0",
-    "eslint-plugin-mocha": "^5.2.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-compat": "^3.5.1",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^1.1.2",
     "lint-staged": "^7.3.0",
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.14.3",
+    "prettier": "^2.0.4",
     "rimraf": "^2.6.2",
     "semantic-release": "^15.10.6",
     "typescript": "^3.1.3"
