--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:js": "npm run --silent eslint -- .",
     "lint:types": "tsc",
     "semantic-release": "semantic-release",
-    "test": "echo 'this package does not have tests'"
+    "test": "DEBUG_COLORS=false DEBUG_HIDE_DATE=true jest"
   },
   "engines": {
     "node": ">=10"
@@ -47,7 +47,8 @@
     "@ianwremmel/eslint-plugin-ianwremmel": "^3.1.1",
     "@types/debug": "0.0.31",
     "@types/invariant": "^2.2.29",
-    "@types/node": "^10.12.0",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^10.17.20",
     "@types/supports-color": "^5.3.0",
     "condition-circle": "^2.0.1",
     "eslint": "^6.8.0",
@@ -60,6 +61,8 @@
     "eslint-plugin-mocha": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "jest": "^25.3.0",
+    "jest-junit": "^10.0.0",
     "lint-staged": "^10.1.5",
     "markdown-toc": "^1.2.0",
     "npm-run-all": "^4.1.3",
