--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "@babel/preset-typescript": "^7.9.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ianwremmel/eslint-plugin-ianwremmel": "^3.1.1",
@@ -50,9 +51,12 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^10.17.20",
     "@types/supports-color": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "condition-circle": "^2.0.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-comments": "^1.0.0",
     "eslint-plugin-compat": "^3.5.1",
     "eslint-plugin-eslint-comments": "^3.1.2",
@@ -69,7 +73,7 @@
     "prettier": "^2.0.4",
     "rimraf": "^2.6.2",
     "semantic-release": "^17.0.6",
-    "typescript": "^3.1.3"
+    "typescript": "^3.8.3"
   },
   "lint-staged": {
     "*.js": "npm run eslint -- ",
